# nbody

./: CMakeLists.txt  README.md  nbody.cpp
include/staplegl/modules/: vertex_buffer.hpp
shaders/: nbody_shader.glsl  passthrough_shader.glsl  smooth_texture.glsl
